--- a/form.html
+++ b/form.html
@@ -6,7 +6,7 @@
 <body>
 	<h1>Kalkulator Sederhana</h1>
     <p>Silahkan Memilih Angka yang Ingin Dihitung!</p>
-	<form>
+	<form action="http://localhost/6701213056-KintanFahira-assessment1/proses.php" method="post">
 		<label for="angka1">Angka 1:</label>
 		<input type="number" id="angka1" name="angka1" required><br><br>
 		
